UserService: implemented login, register, refresh, token validation; tested via Postman